Fix erroreous property name
